; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/msvcrt/extr_misc.c_test__get_doserrno.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/msvcrt/extr_misc.c_test__get_doserrno.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ERROR_INVALID_CMM = common dso_local global i32 0, align 4
@_doserrno = common dso_local global i32 0, align 4
@EBADF = common dso_local global i32 0, align 4
@errno = common dso_local global i32 0, align 4
@EINVAL = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [49 x i8] c"Expected _get_doserrno to return EINVAL, got %d\0A\00", align 1
@.str.1 = private unnamed_addr constant [52 x i8] c"Expected _doserrno to be ERROR_INVALID_CMM, got %d\0A\00", align 1
@.str.2 = private unnamed_addr constant [36 x i8] c"Expected errno to be EBADF, got %d\0A\00", align 1
@.str.3 = private unnamed_addr constant [44 x i8] c"Expected _get_doserrno to return 0, got %d\0A\00", align 1
@.str.4 = private unnamed_addr constant [58 x i8] c"Expected output variable to be ERROR_INVALID_CMM, got %d\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test__get_doserrno to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test__get_doserrno() #0 {
  %1 = alloca i32, align 4
  %2 = alloca i32, align 4
  %3 = load i32, i32* @ERROR_INVALID_CMM, align 4
  store i32 %3, i32* @_doserrno, align 4
  %4 = load i32, i32* @EBADF, align 4
  store i32 %4, i32* @errno, align 4
  %5 = call i32 @p_get_doserrno(i32* null)
  store i32 %5, i32* %1, align 4
  %6 = load i32, i32* %1, align 4
  %7 = load i32, i32* @EINVAL, align 4
  %8 = icmp eq i32 %6, %7
  %9 = zext i1 %8 to i32
  %10 = load i32, i32* %1, align 4
  %11 = call i32 @ok(i32 %9, i8* getelementptr inbounds ([49 x i8], [49 x i8]* @.str, i64 0, i64 0), i32 %10)
  %12 = load i32, i32* @_doserrno, align 4
  %13 = load i32, i32* @ERROR_INVALID_CMM, align 4
  %14 = icmp eq i32 %12, %13
  %15 = zext i1 %14 to i32
  %16 = load i32, i32* @_doserrno, align 4
  %17 = call i32 @ok(i32 %15, i8* getelementptr inbounds ([52 x i8], [52 x i8]* @.str.1, i64 0, i64 0), i32 %16)
  %18 = load i32, i32* @errno, align 4
  %19 = load i32, i32* @EBADF, align 4
  %20 = icmp eq i32 %18, %19
  %21 = zext i1 %20 to i32
  %22 = load i32, i32* @errno, align 4
  %23 = call i32 @ok(i32 %21, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.2, i64 0, i64 0), i32 %22)
  %24 = load i32, i32* @ERROR_INVALID_CMM, align 4
  store i32 %24, i32* @_doserrno, align 4
  %25 = load i32, i32* @EBADF, align 4
  store i32 %25, i32* @errno, align 4
  store i32 -559038737, i32* %2, align 4
  %26 = call i32 @p_get_doserrno(i32* %2)
  store i32 %26, i32* %1, align 4
  %27 = load i32, i32* %1, align 4
  %28 = icmp eq i32 %27, 0
  %29 = zext i1 %28 to i32
  %30 = load i32, i32* %1, align 4
  %31 = call i32 @ok(i32 %29, i8* getelementptr inbounds ([44 x i8], [44 x i8]* @.str.3, i64 0, i64 0), i32 %30)
  %32 = load i32, i32* %2, align 4
  %33 = load i32, i32* @ERROR_INVALID_CMM, align 4
  %34 = icmp eq i32 %32, %33
  %35 = zext i1 %34 to i32
  %36 = load i32, i32* %2, align 4
  %37 = call i32 @ok(i32 %35, i8* getelementptr inbounds ([58 x i8], [58 x i8]* @.str.4, i64 0, i64 0), i32 %36)
  ret void
}

declare dso_local i32 @p_get_doserrno(i32*) #1

declare dso_local i32 @ok(i32, i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
